[package]
name = "taskmaster"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
async-trait = "0.1"
csv = "1"
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
